--- a/controlPanel/hostapd-conf.template
+++ b/controlPanel/hostapd-conf.template
@@ -1,8 +1,10 @@
+country_code=US
 interface=wlan1
 driver=nl80211
+ieee80211n=1
+wmm_enabled=0
 ssid={ssid}
 hw_mode=g
 channel={channel}
 macaddr_acl=0
-auth_algs=1
 ignore_broadcast_ssid=0
